[ui] fix overlapping clr-icons when inside header dropdown (#1957)

--- a/src/clr-angular/layout/nav/_header.clarity.scss
+++ b/src/clr-angular/layout/nav/_header.clarity.scss
@@ -302,7 +302,7 @@
                     @include header-nav-appearance();
                 }
 
-                clr-icon:not([shape^="caret"]) {
+                .dropdown-toggle.nav-icon clr-icon:not([shape^="caret"]) {
                     position: absolute;
                     top: 50%;
                     transform: translateY(-50%);
